--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-ultralytics
-opencv-python-headless
-pillow
-numpy
-torch
+streamlit>=1.37,<2
+ultralytics>=8.2,<9
+torch>=2.2,<3
+torchvision>=0.17,<1
+pillow>=10,<12
+opencv-python-headless==4.10.0.84
+numpy<2
